<resources>
    <string name="app_name">固定资产管理系统V1.0</string>
    <string name="str_btn_login">登 录</string>
    <string name="iconft_yonghuming">&#xe654;</string>
    <string name="iconft_mima">&#xe642;</string>
    <string name="icon_config">&#xe660;</string>
    <string name="icon_sync">&#xe602;</string>
    <string name="icon_vent">&#xe60e;</string>
    <string name="icon_search">&#xe655;</string>
    <string name="icon_server">&#xe60c;</string>
    <string name="icon_execute">&#xe62f;</string>
    <string name="icon_download">&#xe78e;</string>
    <string name="icon_upload">&#xe78a;</string>
    <string name="icon_position">&#xe653;</string>
    <string name="icon_clear_cache">&#xe611;</string>
    <string name="icon_assets_pos_total">&#xe600;</string>
    <string name="icon_assets_pos_invented">&#xe625;</string>
    <string name="icon_assets_pos_uninvented">&#xe9e8;</string>
    <string name="str_lbl_initServer">配置服务器</string>
    <string name="str_hint_input_username">请输入用户名</string>
    <string name="str_hint_input_userpwd">请输入密码</string>
    <string name="str_hint_input_serverAddress">请输入服务器地址</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="str_lbl_config">系统配置</string>
    <string name="str_lbl_syn">数据同步</string>
    <string name="str_lbl_vent">资产盘点</string>
    <string name="str_lbl_sysset">设置</string>
    <string name="str_lbl_sstr_system_nameearch">资产扫描</string>
    <string name="str_btn_connect">连接</string>
    <string name="str_lbl_plan_name">盘点单号:</string>
    <string name="str_lbl_plan_exeuser">执行人:</string>
    <string name="str_lbl_plan_invcount">资产数量:</string>
    <string name="str_lbl_date_to">到</string>
    <string name="str_lbl_date_to_id">-</string>
    <string name="str_btn_start_scan">开始扫描</string>
    <string name="str_btn_end_scan">结束扫描</string>
    <string name="str_lbl_assets_pos_total">资产总数:</string>
    <string name="str_lbl_assets_pos_invented">已盘资产:</string>
    <string name="str_lbl_assets_pos_uninvented">未盘资产:</string>
    <string name="str_tab_assets_inv_total">全部资产</string>
    <string name="str_tab_assets_inv_vented">已盘点</string>
    <string name="str_tab_assets_inv_unvented">未盘点</string>
    <string name="str_tab_assets_inv_exception">异常情况</string>
    <string name="str_btn_ok">确定</string>
    <string name="str_btn_cancel">取消</string>
    <string name="str_chk_rememberme">记住用户名</string>
    <string name="str_chk_autologin">自动登录</string>
    <string name="str_tip_str">提示</string>
    <string name="str_confirm_dialog_tip_clear_cache">确定要清空本地缓存记录吗？</string>
    <string name="str_clear_cache_result_ok">缓存已清空</string>
    <string name="str_tip_login_success">登录成功!</string>
    <string name="str_tip_login_failed_up_invalid">用户名或密码错误</string>
    <string name="str_tip_login_failed_up_invalid_null">用户名或密码不能为空</string>
    <string name="str_tip_login_server_failed">连接服务器失败</string>
    <string name="str_tip_error_code">错误码</string>
    <string name="str_tip_error_loadmore_network_retry">网络错误，请重试</string>
    <string name="str_tip_error_loadmore_complete">加载完成</string>
    <string name="str_tip_refresh_release_to_refresh">释放开始加载更多记录</string>
    <string name="str_tip_refresh_pull_to_fresh">下拉加载更多记录</string>
    <string name="str_tip_refresh_refreshing">正在加载记录，请稍后...</string>
    <string name="str_tip_refresh_complete">加载完成</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_title_invpos">盘点位置列表</string>
    <string name="str_title_invplan">盘点计划列表</string>
    <string name="inventory">开始盘点</string>
    <string name="stop_inventory">结束盘点</string>
    <string name="serialport_init_fail_">打开扫描器失败</string>
    <string name="str_system_name">固定资产管理系统</string>
    <string name="str_system_version">V1.0</string>
    <string name="str_config_item_test_net">正在检测手持机网络状态...</string>
    <string name="str_config_item_test_net_result_ok">手持机网络状态正常</string>
    <string name="str_config_item_test_net_result_failed">手持机网络状态异常，请检查网络设置</string>
    <string name="str_config_item_test_server">正在连接服务器...</string>
    <string name="str_config_item_test_server_result_ok">连接服务器成功</string>
    <string name="str_config_item_test_server_result_failed">连接服务器失败，请检查配置</string>
    <string name="str_config_item_test_result_saving">正在保存配置信息...</string>
    <string name="str_config_item_test_result_saving_ok">保存配置信息成功</string>
    <string name="str_config_item_test_result_saving_failed">保存配置信息失败</string>
    <string name="str_config_item_test_url_uninvalid">服务器地址无效</string>
    <string name="str_download_plan_failed">加载任务信息失败，请检查配置或联系管理员</string>
    <string name="str_download_plan_detail_failed">加载任务详情失败，请检查配置或联系管理员</string>
    <string name="str_check_inventory_download_plan">正在下载盘点计划...</string>
    <string name="str_check_inventory_download_plan_ok">下载盘点计划成功</string>
    <string name="str_check_inventory_download_plan_failed">下载盘点计划失败</string>
    <string name="str_check_inventory_save_plan">正在缓存盘点计划...</string>
    <string name="str_check_inventory_save_plan_ok">缓存盘点计划成功</string>
    <string name="str_check_inventory_save_plan_failed">缓存盘点计划失败</string>
    <string name="str_check_inventory_download_plandetail">正在下载盘点计划详情...</string>
    <string name="str_check_inventory_download_plandetail_ok">下载盘点计划详情成功</string>
    <string name="str_check_inventory_download_plandetail_failed">下载盘点计划详情失败，请检查配置或联系管理员</string>
    <string name="str_check_inventory_save_plandetail">正在保存盘点计划详情...</string>
    <string name="str_check_inventory_save_plandetail_ok">保存盘点计划详情成功</string>
    <string name="str_check_inventory_save_plandetail_failed">保存盘点计划详情失败，请检查配置或联系管理员</string>
    <string name="str_check_inventory_download_positions">正在下载资产存放位置...</string>
    <string name="str_check_inventory_download_positions_ok">下载资产存放位置成功</string>
    <string name="str_check_inventory_download_positions_failed">下载资产存放位置失败，请检查配置或联系管理员</string>
    <string name="str_check_inventory_save_positions">正在缓存资产存放位置...</string>
    <string name="str_check_inventory_save_positions_ok">缓存资产存放位置成功</string>
    <string name="str_check_inventory_save_positions_failed">缓存资产存放位置失败,请检查配置或联系管理员</string>
    <string name="str_inventory_position_exception">位置异常</string>
    <string name="str_subtitle_asset_exception">资产异常情况录入</string>
    <string name="str_hint_textbox_remark">备注信息</string>
    <string name="str_radio_text_asset_exception_status">状态异常</string>
    <string name="str_radio_text_asset_exception_rfid">标签异常</string>
    <string name="str_radio_text_asset_exception_position">位置异常</string>
    <string name="str_tip_dialog_save_ok">保存成功</string>
    <string name="str_menu_order_out">资产出账</string>
    <string name="str_menu_order_in">新资产入账</string>
    <string name="str_menu_order_req">资产借用</string>
    <string name="str_menu_order_ret">资产归还</string>
    <string name="str_menu_inv">盘点</string>
    <string name="str_menu_data_sync">数据同步</string>
    <string name="str_menu_label_binding">单标签绑定</string>
    <string name="str_menu_logout">注销</string>
    <string name="str_save_data">保存</string>
    <string name="str_menu_read_rfid">资产识别</string>
    <string name="str_title_order_in_base">入账基本信息</string>
    <string name="str_title_order_out_base">出账基本信息</string>
    <string name="str_title_order_inv_base">盘点基本信息</string>
    <string name="str_title_order_ret_base">归还基本信息</string>
    <string name="str_title_order_req_base">借用基本信息</string>
    <string name="str_title_btn_data_dl">下载数据</string>
    <string name="str_title_btn_data_ul">上传数据</string>
    <string name="str_menu_title_local_list">本地列表</string>
    <string name="str_title_data_sync_dl_basedata">基础数据</string>
    <string name="str_title_prompt_order_warehouse">选择办公司</string>
    <string name="str_title_prompt_order_from">送货人</string>
    <string name="str_title_prompt_order_rec">资产接收人</string>
    <string name="str_title_prompt_order_ret">归还人</string>
    <string name="str_title_prompt_order_mgr">经手人</string>
    <string name="str_title_prompt_order_mgr_inv">盘点人</string>
    <string name="str_lbl_btn_scan">扫描</string>
    <string name="str_lbl_warehouse">办公室</string>
    <string name="str_lbl_asset_rec">接收人</string>
    <string name="str_lbl_asset_send">送货人</string>
    <string name="str_lbl_asset_ret">归还人</string>
    <string name="str_lbl_asset_mgr">经手人</string>
    <string name="str_lbl_asset_invt">盘点人</string>
    <string name="str_lbl_asset_order_date">日期</string>
    <string name="str_title_assets_list">资产列表</string>
    <string name="str_title_assets_bgs">办公室</string>
    <string name="str_title_asset_clsfst">资产大类</string>
    <string name="str_title_asset_clsscd">资产小类</string>
    <string name="str_title_asset_location">办公室</string>
    <string name="str_title_asset_fact">厂家</string>
    <string name="str_title_asset_price">单价</string>
    <string name="str_title_asset_czl">残值率</string>
    <string name="str_title_asset_type">规格</string>
    <string name="str_title_asset_rfid">绑定标签</string>
    <string name="str_title_rfid_info">标签信息</string>
    <string name="str_title_rfid_asset_info">绑定资产信息</string>
    <string name="str_title_prompt_asset_clsfst">资产大类</string>
    <string name="str_title_prompt_asset_clsscd">资产小类</string>
    <string name="str_title_imgbtn_desc_scan">开始扫描</string>
    <string name="str_title_toolbar_order_req">资产借用单</string>
    <string name="str_title_toolbar_order_req_list">资产借用单列表</string>
    <string name="str_title_toolbar_order_in">新资产入账单</string>
    <string name="str_title_toolbar_order_in_list">新资产入账单</string>
    <string name="str_title_toolbar_order_out">资产出账单</string>
    <string name="str_title_toolbar_order_out_list">资产出账单列表</string>
    <string name="str_title_toolbar_order_ret">资产归还单</string>
    <string name="str_title_toolbar_order_ret_list">资产归还单列表</string>
    <string name="str_title_toolbar_server_set">服务器信息配置</string>
    <string name="str_msg_toast_save_order_success">单据保存成功</string>
    <string name="str_title_toolbar_order_inv">资产盘点单</string>
    <string name="str_title_toolbar_order_inv_list">资产盘点单列表</string>
    <string name="str_lbl_asset_name">资产</string>
    <string name="str_order_item_lbl_id">单号：</string>
    <string name="str_order_item_lbl_cont_in">送货人：</string>
    <string name="str_order_item_lbl_cont_out">接收人：</string>
    <string name="str_order_item_lbl_cont_inv">盘点人：</string>
    <string name="str_order_item_lbl_cont_req">借用人：</string>
    <string name="str_order_item_lbl_cont_ret">归还人：</string>
    <string name="str_order_item_lbl_mgr">经手人：</string>
    <string name="str_order_item_lbl_acount_in">入账数量：</string>
    <string name="str_order_item_lbl_acount_out">出账数量：</string>
    <string name="str_order_item_lbl_acount_inv">盘点数量：</string>
    <string name="str_order_item_lbl_odate_in">入账日期：</string>
    <string name="str_order_item_lbl_odate_out">出账日期：</string>
    <string name="str_order_item_lbl_odate_inv">盘点日期：</string>
    <string name="str_tip_save_record_msg">请先停止扫描</string>
    <string name="str_rfid_binded">标签已绑定其他资产</string>
    <string name="str_save_asset_rfid_invalid">标签ID无效，请先扫描资产标签</string>
    <string name="str_save_asset_clsct_invalid">资产类别无效</string>
    <string name="str_lbl_asset_sug_location">办公室</string>
    <string name="str_confirm_rfid_rebind">此标签已绑定其他资产，确认要绑定当前新资产吗？</string>
    <string name="str_rfid_not_valid_need_upload">需要上传数据后才能使用此标签</string>
    <string name="str_tip_no_records">暂无更多记录...</string>
    <string name="str_tip_load_order_list_complete">单据列表加载完成</string>
    <string name="str_lbl_in_count">入账数量</string>
    <string name="str_btn_title_start_test_server_url">测试连接</string>
    <string name="str_txt_tip_server_url">服务器连接地址 ip or url</string>
    <string name="str_txt_tip_server_user">登陆服务器用户名</string>
    <string name="str_txt_tip_server_passwd">登陆服务器密码</string>
    <string name="str_txt_title_server_url">服务器地址设置</string>
    <string name="str_data_sync_error_invalid_server">服务器信息无效，请重新配置</string>
</resources>