<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/menu_txt_name_size"
        android:padding="8dp"
        android:background="@color/gray"
        android:text="@string/str_title_order_inv_base" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingLeft="@dimen/item_padding_common"
        android:paddingRight="@dimen/item_padding_common"
        android:layout_below="@id/textView"
        android:layout_margin="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/linelyt_border"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/item_margin_common"
                android:text="@string/str_lbl_warehouse"/>

            <Spinner
                android:id="@+id/sp_warehouse_inv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="8dp"
                android:prompt="@string/str_title_prompt_order_warehouse"
                android:spinnerMode="dialog" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="64dp"
                android:text="@string/str_lbl_asset_invt"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/item_margin_common"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/item_margin_common"
                />

            <Spinner
                android:id="@+id/sp_mgr_inv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/tipspiceshape"
                android:prompt="@string/str_title_prompt_order_mgr_inv"
                android:spinnerMode="dialog" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@drawable/linelyt_border"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_lbl_asset_order_date"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/item_margin_common"
                />

            <TextView
                android:id="@+id/txt_invdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:layout_marginLeft="@dimen/item_margin_common"
                android:layout_marginTop="@dimen/item_margin_common"
                android:textSize="16sp"
                android:textColor="@color/colorDetailItemText"
                android:text="2019-03-08" />

            <ImageButton
                android:id="@+id/btn_order_inv_add_asset"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@color/gray"
                android:contentDescription="@string/str_title_imgbtn_desc_scan"
                android:src="@drawable/icon_scan_32" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>