<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".activity.LoginActivity"
    >

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryBG"
        android:text="@string/str_btn_login"
        android:textColor="@color/colorButtonTextCommon"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <EditText
        android:id="@+id/txtLoginUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:drawableLeft="@drawable/icon_login_username"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/str_hint_input_username"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="@dimen/list_icon_size_pos"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline18" />

    <EditText
        android:id="@+id/txtLoginUserPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edittext"
        android:drawableLeft="@drawable/icon_login_password"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/str_hint_input_userpwd"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="@dimen/list_icon_size_pos"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginUserName" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <CheckBox
        android:id="@+id/chkLoginAutoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/str_chk_autologin"
        android:textColor="@color/colorDetailItemText"
        android:textSize="@dimen/list_text_size_inv"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/chkLoginRememberme" />

    <CheckBox
        android:id="@+id/chkLoginRememberme"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/str_chk_rememberme"
        android:textColor="@color/colorDetailItemText"
        android:textSize="@dimen/list_text_size_inv"
        app:layout_constraintEnd_toStartOf="@+id/chkLoginAutoLogin"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginUserPassword" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="3200dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="hello"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:srcCompat="@drawable/img_logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/str_system_name"
        android:textSize="@dimen/list_icon_size_pos"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/str_system_version"
        android:textSize="@dimen/list_icon_size_pos"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

</android.support.constraint.ConstraintLayout>