<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/menu_txt_name_size"
        android:padding="8dp"
        android:background="@color/gray"
        android:text="@string/str_title_rfid_asset_info" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingLeft="@dimen/item_padding_common"
        android:paddingRight="@dimen/item_padding_common"
        android:layout_below="@id/textView"
        android:layout_margin="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/item_padding_common"
            android:paddingBottom="@dimen/item_padding_common"
            android:background="@drawable/linelyt_border"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="center"
                android:text="@string/str_lbl_asset_name"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txt_rfid_asset_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textAlignment="center"
                android:textSize="16sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/item_padding_common"
            android:paddingBottom="@dimen/item_padding_common"
            android:background="@drawable/linelyt_border"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="center"
                android:text="@string/str_title_asset_location"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_rfid_asset_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textAlignment="center"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/item_padding_common"
            android:paddingBottom="@dimen/item_padding_common"
            android:background="@drawable/linelyt_border"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="center"
                android:text="@string/str_title_asset_fact"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txt_rfid_asset_fact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textAlignment="center"
                android:textSize="16sp" />

        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/item_padding_common"
            android:paddingBottom="@dimen/item_padding_common"
            android:background="@drawable/linelyt_border"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="center"
                android:text="@string/str_title_asset_type"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txt_rfid_asset_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textAlignment="center"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/item_padding_common"
            android:paddingBottom="@dimen/item_padding_common"
            android:background="@drawable/linelyt_border"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="center"
                android:text="@string/str_title_asset_price"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txt_rfid_asset_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textAlignment="center"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>